# HoloSpace3D

./: .gitignore  README.md
holo swift/: ContentView.swift  holo_swiftApp.swift
holo swift.xcodeproj/: project.pbxproj
holo swift.xcodeproj/project.xcworkspace/xcuserdata/reinesana.xcuserdatad/: UserInterfaceState.xcuserstate
holo swift.xcodeproj/xcuserdata/reinesana.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
holo swift.xcodeproj/xcuserdata/reinesana.xcuserdatad/xcschemes/: xcschememanagement.plist
holo swift/App/: holo_swiftApp.swift
holo swift/Assets.xcassets/Graphemer.dataset/: Contents.json
holo swift/Assets.xcassets/Pin by Adele Maré on God's Paintbrush _ Nature pictures, Nature photography, Scenery wallpaper.imageset/: Contents.json
holo swift/Assets.xcassets/gif-1.dataset/: Contents.json
holo swift/Assets.xcassets/girls-1.imageset/: Contents.json
holo swift/Assets.xcassets/girls-2.imageset/: Contents.json
holo swift/Assets.xcassets/girls-3.imageset/: Contents.json
holo swift/Assets.xcassets/group-1.imageset/: Contents.json
holo swift/Assets.xcassets/group-2.imageset/: Contents.json
holo swift/Assets.xcassets/group-3.imageset/: Contents.json
holo swift/Assets.xcassets/post-10.imageset/: Contents.json
holo swift/Assets.xcassets/post-2.imageset/: Contents.json
holo swift/Assets.xcassets/post-3.imageset/: Contents.json
holo swift/Assets.xcassets/post-4.imageset/: Contents.json
holo swift/Assets.xcassets/post-5.imageset/: Contents.json
holo swift/Assets.xcassets/post-6.imageset/: Contents.json
holo swift/Assets.xcassets/prof-1.imageset/: Contents.json
holo swift/Assets.xcassets/prof-11.imageset/: Contents.json
holo swift/Assets.xcassets/prof-13.imageset/: Contents.json
holo swift/Assets.xcassets/prof-2.imageset/: Contents.json
holo swift/Assets.xcassets/prof-3.imageset/: Contents.json
holo swift/Assets.xcassets/prof-4.imageset/: Contents.json
holo swift/Assets.xcassets/prof-5.imageset/: Contents.json
holo swift/Assets.xcassets/prof-6.imageset/: Contents.json
holo swift/Assets.xcassets/prof-7.imageset/: Contents.json
holo swift/Assets.xcassets/prof-8.imageset/: Contents.json
holo swift/Assets.xcassets/table-1.imageset/: Contents.json
holo swift/Assets.xcassets/table-2.imageset/: Contents.json
holo swift/Assets.xcassets/table-3.imageset/: Contents.json
holo swift/Assets.xcassets/terry-1.dataset/: Contents.json
holo swift/Assets.xcassets/terry-11.imageset/: Contents.json
holo swift/Assets.xcassets/terry-2.imageset/: Contents.json
holo swift/Assets.xcassets/terry-3.imageset/: Contents.json
holo swift/Camera/: ContentView.swift
holo swift/Explore/Service/: ExploreService.swift
holo swift/Explore/View/: ExploreView.swift
holo swift/Explore/View/Storycards/: AddStoryCard.swift  StoryCard.swift  StoryListView.swift
holo swift/Explore/ViewModel/: ExploreViewModel.swift
holo swift/Extensions/: DeveloperPreview.swift
holo swift/Posts/Models/: Post.swift
holo swift/Posts/View/: PostImageCourouselView.swift  PostView.swift  UserHeading.swift
holo swift/Profile/: ProfileView.swift
holo swift/TabBar/: MainTabView.swift
holo swift/User/: CurrentUserProfileHeaderView.swift  UserView.swift
holospace/: CMakeLists.txt  README.md  colmap.cpp  convert.py  gsplat.hpp  input_data.cpp  model.cpp  nerfstudio.cpp  opensfm.cpp  opensplat.cpp  project_gaussians.cpp  project_gaussians.hpp  rasterize_gaussians.cpp  rasterize_gaussians.hpp  simple_trainer.cpp  tensor_math.hpp
